tests/palaiologos/fail/integer_bounds/-2^32/rep_sub.asm
rep sub -100000000h
